@@ -15,3 +15,8 @@ intltool-*
 *.desktop
 *.swp
 build
+autom4te.cache
+mkinstalldirs
+omf.make
+xmldocs.make
+
